# mwtools

./: .gitignore  MIT-LICENSE.txt  mwtools.cabal  stack.yaml
app/: checkdigit.hs  hkex.hs  joinPara.hs  kver.hs  nub.hs  sbl.hs  sssum.hs  topchars.hs  usc.hs
src/: SubsetSum.hs  TopStrings.hs  dice.hs  joinPara.hs  taxi.hs  topwords.hs
test/: tests.hs
