name:                mwtools
version:             0.2.1.0
build-type:          Simple
cabal-version:       >=1.8
executable checkdigit
  hs-source-dirs:      src
  main-is:             checkdigit.hs
  build-depends:       base
executable joinPara
  hs-source-dirs:      src
  main-is:             joinPara.hs
  build-depends:       base
executable kver
  hs-source-dirs:      src
  main-is:             kver.hs
  build-depends:       base, tagsoup, curl
executable nub
  hs-source-dirs:      src
  main-is:             nub.hs
  build-depends:       base
executable topwords
  main-is:             topwords.hs
  hs-source-dirs:      src
  build-depends:       base, text, unordered-containers, containers, hashable
  other-modules:       TopStrings
executable topchars
  hs-source-dirs:      src
  main-is:             topchars.hs
  build-depends:       base, text, unordered-containers, containers, hashable
  other-modules:       TopStrings
executable usc
  hs-source-dirs:      src
  main-is:             usc.hs
  other-modules:       TopStrings
  build-depends:       base, text, unordered-containers, containers, hashable
executable dice
  hs-source-dirs:      src
  main-is:             dice.hs
  build-depends:       base, bytestring
executable taxi
  hs-source-dirs:      src
  main-is:             taxi.hs
  ghc-options:         -dynamic
  build-depends:       base, bytestring
executable sbl
  hs-source-dirs:      src
  main-is:             sbl.hs
  build-depends:       base, bytestring
